musicassistant/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  selector:
    app: music-assistant
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
  - protocol: TCP
    port: 8095
    targetPort: 8095
    name: api
