musicassistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
spec:
  hostnames:
  - musicassistant.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: music-assistant
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
